// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vault instance - updateIdentity updates existing identity 1`] = `
Array [
  Object {
    "address": "sapling-new-updated-address",
    "keys": Object {
      "sk": "saturn-spending-key",
      "tpk": "saturn-transparent-private-key",
    },
    "name": "Saturn",
    "shippingData": Object {},
    "signerPrivKey": undefined,
    "signerPubKey": undefined,
    "transparentAddress": "saturn-t-address",
  },
  Object {
    "address": "mars-address-zcash",
    "keys": Object {
      "sk": "mars-spending-key",
      "tpk": "mars-transparent-private-key",
    },
    "name": "Mars",
    "shippingData": Object {},
    "signerPrivKey": undefined,
    "signerPubKey": undefined,
    "transparentAddress": "mars-t-address",
  },
  Object {
    "address": "jupiter-address-zcash",
    "keys": Object {
      "sk": "jupiter-spending-key",
      "tpk": "jupiter-transparent-private-key",
    },
    "name": "Jupiter",
    "shippingData": Object {},
    "signerPrivKey": undefined,
    "signerPubKey": undefined,
    "transparentAddress": "jupiter-t-address",
  },
]
`;

exports[`vault instance - updateIdentity updates existing identity by signer private and public keys 1`] = `
Array [
  Object {
    "address": "saturn-address-zcash",
    "keys": Object {
      "sk": "saturn-spending-key",
      "tpk": "saturn-transparent-private-key",
    },
    "name": "Saturn",
    "shippingData": Object {},
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "transparentAddress": "saturn-t-address",
  },
  Object {
    "address": "mars-address-zcash",
    "keys": Object {
      "sk": "mars-spending-key",
      "tpk": "mars-transparent-private-key",
    },
    "name": "Mars",
    "shippingData": Object {},
    "signerPrivKey": undefined,
    "signerPubKey": undefined,
    "transparentAddress": "mars-t-address",
  },
  Object {
    "address": "jupiter-address-zcash",
    "keys": Object {
      "sk": "jupiter-spending-key",
      "tpk": "jupiter-transparent-private-key",
    },
    "name": "Jupiter",
    "shippingData": Object {},
    "signerPrivKey": undefined,
    "signerPubKey": undefined,
    "transparentAddress": "jupiter-t-address",
  },
]
`;

exports[`vault instance creates identity 1`] = `undefined`;

exports[`vault instance list channels when contains channels 1`] = `
Array [
  Object {
    "address": "zs1testaddress3",
    "description": "Channel about 3",
    "keys": Object {
      "ivk": "incoming-viewing-key-3",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 3",
    "private": true,
    "unread": 3,
  },
  Object {
    "address": "zs1testaddress2",
    "description": "",
    "keys": Object {
      "ivk": "incoming-viewing-key-2",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 2",
    "private": true,
    "unread": 2,
  },
  Object {
    "address": "zs1testaddress1",
    "description": "Channel about 1",
    "keys": Object {
      "ivk": "incoming-viewing-key-1",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 1",
    "private": true,
    "unread": 1,
  },
]
`;

exports[`vault instance lists identities 1`] = `
Array [
  Object {
    "address": "saturn-address-zcash",
    "keys": Object {
      "sk": "saturn-spending-key",
      "tpk": "saturn-transparent-private-key",
    },
    "name": "Saturn",
    "shippingData": Object {},
    "signerPrivKey": undefined,
    "signerPubKey": undefined,
    "transparentAddress": "saturn-t-address",
  },
  Object {
    "address": "mars-address-zcash",
    "keys": Object {
      "sk": "mars-spending-key",
      "tpk": "mars-transparent-private-key",
    },
    "name": "Mars",
    "shippingData": Object {},
    "signerPrivKey": undefined,
    "signerPubKey": undefined,
    "transparentAddress": "mars-t-address",
  },
  Object {
    "address": "jupiter-address-zcash",
    "keys": Object {
      "sk": "jupiter-spending-key",
      "tpk": "jupiter-transparent-private-key",
    },
    "name": "Jupiter",
    "shippingData": Object {},
    "signerPrivKey": undefined,
    "signerPubKey": undefined,
    "transparentAddress": "jupiter-t-address",
  },
]
`;

exports[`vault instance returns created vault 1`] = `
Vault {
  "channels": Object {
    "importChannel": [Function],
    "listChannels": [Function],
    "updateLastSeen": [Function],
  },
  "contacts": Object {
    "deleteMessage": [Function],
    "getLastSeen": [Function],
    "listMessages": [Function],
    "loadAllSentMessages": [Function],
    "saveMessage": [Function],
    "updateLastSeen": [Function],
    "updateMessage": [Function],
  },
  "lock": [MockFunction],
  "withWorkspace": [Function],
}
`;

exports[`vault instance updateShippingData -  when no shipping data 1`] = `
Object {
  "address": "saturn-private-address",
  "keys": "{\\"tpk\\":\\"saturn-tpk\\",\\"sk\\":\\"saturn-sk\\"}",
  "name": "Saturn",
  "shippingData": "{\\"firstName\\":\\"Rumble\\",\\"lastName\\":\\"Fish\\",\\"street\\":\\"RumbleFish street\\",\\"country\\":\\"Poland\\",\\"region\\":\\"Malopolskie\\",\\"city\\":\\"Fishville\\",\\"postalCode\\":\\"1337-455\\"}",
  "signerPrivKey": "AyrXTov+4FEyle1BrxndDhePlUOB1nPV5YvyexC8m6E=",
  "signerPubKey": "Alw9G29ahXm5et9T7FJF3lbXVXNkapR826yPtfMVJYnK",
  "title": "Saturn",
  "transparentAddress": "saturn-transparent-address",
}
`;

exports[`vault instance updateShippingData -  when shipping data already exist 1`] = `
Object {
  "address": "saturn-private-address",
  "keys": "{\\"tpk\\":\\"saturn-tpk\\",\\"sk\\":\\"saturn-sk\\"}",
  "name": "Saturn",
  "shippingData": "{\\"firstName\\":\\"Rumble2\\",\\"lastName\\":\\"Fish2\\",\\"street\\":\\"RumbleFish street2\\",\\"country\\":\\"Poland\\",\\"region\\":\\"Malopolskie\\",\\"city\\":\\"Fishville2\\",\\"postalCode\\":\\"1337-455\\"}",
  "signerPrivKey": "AyrXTov+4FEyle1BrxndDhePlUOB1nPV5YvyexC8m6E=",
  "signerPubKey": "Alw9G29ahXm5et9T7FJF3lbXVXNkapR826yPtfMVJYnK",
  "title": "Saturn",
  "transparentAddress": "saturn-transparent-address",
}
`;
